#63 try to fix overflow in another css file

--- a/main/view/src/main/webapp/static/less/assets/jquery-ui-bootstrap/dialog.less
+++ b/main/view/src/main/webapp/static/less/assets/jquery-ui-bootstrap/dialog.less
@@ -12,9 +12,10 @@
 	position: absolute; 
 	top: 0;
 	left: 0;
-	padding: .2em; 
-	width: 300px; 
-	overflow: hidden; 
+	padding: .2em;
+	width: 300px;
+	// Do not hide overflow, to enable popovers inside of a dialog.
+	overflow: visible;
 	outline: 0;
 	background-clip: padding-box;
 	background-color: #ffffff;
