--- a/main/view/src/main/webapp/static/less/coceso.less
+++ b/main/view/src/main/webapp/static/less/coceso.less
@@ -48,8 +48,6 @@ body {
 }
 
 .ui-dialog {
-  // Do not hide overflow, to enable popovers inside of a dialog.
-  overflow: visible;
 
   .ui-dialog-titlebar {
     font-size: 13px;
